--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Hazem Waleed</title>
@@ -352,7 +353,7 @@
 
     <section class="education" id="projects">
         <h2 class="heading">Projects</h2>
-        <div class="timeline-content3">
+        <div class="timeline-content4">
             <img src="images/machinetrans.jpg" alt="" class="timeline-image">
             <div class="timeline-text">
                 <h3>Machine Translation</h3>
@@ -363,26 +364,26 @@
             </div>
             <div class="hover-layer2">
                 <a href="https://github.com/hazem-walied/NLP_Specialization/tree/master/NLP_Specialization/Course_4/Machine_Translation" target="_blank" class="hover-layer2">
-                    <img src="images/github.webp">
+                    <img src="images/github.webp" alt="GitHub">
                 </a>                        
             </div>
         </div>
-
-            <div class="timeline-content3">
-                <img src="images/sentiment-analysis.jpg" alt="" class="timeline-image2">
-                <div class="timeline-text">
-                    <h3>Sentiment Analysis</h3>
-                    <p>Part of the NLP Specialization</p><br>
-                    <ul>
-                        <li>Implemented Using Naive Bayes Model</li>
-                    </ul>
-                </div>
-                <div class="hover-layer2">
-                    <a href="https://github.com/hazem-walied/NLP_Specialization/tree/master/NLP_Specialization/Course_1/Sentimant_Analysis" target="_blank" class="hover-layer2">
-                        <img src="images/github.webp">
-                    </a>                        
-                </div>
+    
+        <div class="timeline-content4">
+            <img src="images/sentiment-analysis.jpg" alt="" class="timeline-image2">
+            <div class="timeline-text">
+                <h3>Sentiment Analysis</h3>
+                <p>Part of the NLP Specialization</p><br>
+                <ul>
+                    <li>Implemented Using Naive Bayes Model</li>
+                </ul>
             </div>
+            <div class="hover-layer2">
+                <a href="https://github.com/hazem-walied/NLP_Specialization/tree/master/NLP_Specialization/Course_1/Sentimant_Analysis" target="_blank" class="hover-layer2">
+                    <img src="images/github.webp" alt="GitHub">
+                </a>                        
+            </div>
+        </div>
     </section>
 
 
